menyelesaikan tugas uts

--- a/app/src/main/res/layout/fragment_keteranganaplikasi.xml
+++ b/app/src/main/res/layout/fragment_keteranganaplikasi.xml
@@ -1,3 +1,4 @@
+<!-- 10120201 - Ilham Ramdhan Putra Lesmana - IF5 -->
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent" android:layout_height="wrap_content" >
 	<!-- 
@@ -63,7 +64,7 @@
 						>
 
 						<ImageView android:id="@+id/vector"
-							android:src="@drawable/vector"
+							android:src="@drawable/vector2"
 							android:contentDescription="vector"
 							 android:layout_marginStart="0dp"
 							android:layout_marginTop="0dp"
@@ -81,7 +82,7 @@
 						>
 
 						<ImageView android:id="@+id/vector_ek1"
-							android:src="@drawable/vector_ek1"
+							android:src="@drawable/vector1"
 							android:contentDescription="vector_ek1"
 							 android:layout_marginStart="0dp"
 							android:layout_marginTop="0dp"
@@ -99,7 +100,7 @@
 						>
 
 						<ImageView android:id="@+id/vector_ek2"
-							android:src="@drawable/vector_ek2"
+							android:src="@drawable/vector3"
 							android:contentDescription="vector_ek2"
 							 android:layout_marginStart="0dp"
 							android:layout_marginTop="0dp"
