--- a/app/src/main/res/layout/penjelasan2.xml
+++ b/app/src/main/res/layout/penjelasan2.xml
@@ -1,3 +1,4 @@
+<!-- 10120201 - Ilham Ramdhan Putra Lesmana - IF5 -->
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent" android:layout_height="wrap_content" >
 	<!-- 
