--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 10120201 - Ilham Ramdhan Putra Lesmana - IF5 -->
 <resources>
 	<!-- splash_screen colors -->
 
