--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 10120201 - Ilham Ramdhan Putra Lesmana - IF5 -->
 <resources>
 
 	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
